--- a/blogspot.html
+++ b/blogspot.html
@@ -4,8 +4,13 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aqui vamos hacer un blog post</h1>
-        <h2>Hola a todos</h2>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este titulo atractivo e interesante del post</h1>
+               
+                <p>Y este es el parrafo de inicio
+                    dopnde vamos a explicar las cosas increibles se pueden hacer</p>
+            </div>    
+        </div>    
     </body>
 </html>
