--- a/blogspot.html
+++ b/blogspot.html
@@ -10,6 +10,9 @@
                
                 <p>Y este es el parrafo de inicio
                     dopnde vamos a explicar las cosas increibles se pueden hacer</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                    <p>Suscribete y dale like</p>
+            
             </div>    
         </div>    
     </body>
