--- a/blogspot.html
+++ b/blogspot.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Binvenido hyperblog</title>
+        <title>Binvenido Hyperblog</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
