--- a/blogspot.html
+++ b/blogspot.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Binvenido Hyperblog 2.0</title>
+        <title>Binvenido Hyperblog 2.0 Ultra Plus</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
