--- a/blogspot.html
+++ b/blogspot.html
@@ -12,7 +12,7 @@
                 <h1>Este titulo atractivo e interesante del post</h1>
                
                 <p>Y este es el párrafo de inicio
-                    dopnde vamos a explicar las cosas increibles se pueden hacer</p>
+                    donde vamos a explicar las cosas increibles se pueden hacer</p>
                 <p>Los blogs son la mejor
                      forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                     <p>Suscribete y dale like</p>
